<resources>
    <string name="app_name">Zeeshan Khan</string>
    <string name="large_text">
        "SUMMARY\n"
        "IT professional with an Electrical/Computer Engineering background for the last 20 years "
        "with the focus on Android software development the past 10 years.  Experienced in the "
        "automotive and cellular industry as a Software Engineer using Android development platform. "
        "I have experience in creating applications, compiling and building source code for both "
        "infotainment and mobile phones, building boot loaders and kernels on a device level.  "
        "Currently, I am working as a mobile software developer for an auto-insurance company where "
        "we collect sensor data via android app with user consent for analytical and rating "
        "purposes.  I am self-motivated, eager to learn about new technologies and I strive for "
        "continued excellence.\n\n"
        
        EDUCATION EXPERIENCE\n
        MSEE (Master of Science in Electrical Engineering), Florida Atlantic University,
        Boca Raton, FL, 12/2002
        Dissertation Title: DSP Implementation of a MAP (Maximum A Posteriori Probability) Turbo
        Decoder on TI TMS320C30 Floating Point Processor using Matlab, Assembly
        (Lower level language), and C (Higher Level Language)\n
        BSEE (Bachelor of Sceince in Electrical Engineering), Florida Atlantic University,
        Boca Raton, FL, 04/1997\n\n"

        **For more information please visit this app later, thanks! )**

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_countries_list">CountriesList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="region">Region</string>
    <string name="capital">Capital</string>
    <string name="area">Area</string>
    <string name="sub_region">Sub Region</string>
    <string name="txtViewName">Name</string>
    <string name="txtViewCapital">TextView</string>
    <string name="txtViewArea">Area</string>
    <string name="txtViewPopulation">Population</string>
    <string name="txtViewRegion">Region</string>
    <string name="txtViewSubRegion">Sub Region</string>
    <string name="population">Population</string>
    <string name="countries">Countries</string>
</resources>